Compatibility in case of no masterSchedule.txt file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 immunotron-interface/schedules/*
 immunotron-interface/matrices/*
+immunotron-interface/masterSchedule.txt
+immunotron-interface/__pycache__
