reintegrate any number of timepoints + protocol 4 for Anagha; remove .txt files from repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 immunotron-interface/schedules/*
 immunotron-interface/matrices/*
-immunotron-interface/masterSchedule.txt
+immunotron-interface/*.txt
 immunotron-interface/__pycache__
+immunotron-interface/allExperimentParameters.pkl
